--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -72,11 +72,10 @@
           
           {{content}}
           
-          
       </div>
     </div>
     <footer>
-      <p>Copyright &copy; CSS3_seascape_two | <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
+      <p>Copyright &copy;, 2013</a></p>
     </footer>
   </div>
   <p>&nbsp;</p>
