--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-  <title>CSS3_seascape_two</title>
-  <meta name="description" content="website description" />
-  <meta name="keywords" content="website keywords, website keywords" />
+  <title>У Озера</title>
+  <meta name="description" content="Гостевой дом У Озера. Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка." />
+  <meta name="keywords" content="Улан-Удэ, Левый берег, Карьер, Водоём, отдых, Комфортабельный номер, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
-  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+  <script type="text/javascript" src="/js/modernizr-1.5.min.js"></script>
 </head>
 
 <body>
@@ -17,10 +17,11 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">CSS3<span class="logo_colour">_seascape_two</span></a></h1>
-          <h2>Simple. Contemporary. Website Template.</h2>
+          <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
+          <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
         </div>
       </div>
+      <!--
       <nav>
         <ul class="sf-menu" id="nav">
           <li class="selected"><a href="index.html">Home</a></li>
@@ -47,6 +48,7 @@
           <li><a href="contact.php">Contact Us</a></li>
         </ul>
       </nav>
+      -->
     </header>
     <div id="site_content">
       <ul id="images">
@@ -59,13 +61,12 @@
       </ul>
       <div id="sidebar_container">
         <div class="sidebar">
-          <h3>Latest News</h3>
-          <h4>New Website Launched</h4>
-          <h5>January 1st, 2012</h5>
-          <p>2012 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-          <h4>20% Discount</h4>
-          <h5>March 1st, 2012</h5>
-          <p>We are offering a 20% discount to all new customers.<br /><a href="#">Read more</a></p>
+          <h3>Последние новости</h3>
+          
+          <h4>Запуск Internet сайта.</h4>
+          <h5>17 июля, 2013</h5>
+          <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
+          
         </div>
       </div>
       <div class="content">
