--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -21,6 +21,13 @@
           <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
         </div>
       </div>
+      <nav>
+        <ul class="sf-menu" id="nav">
+          <li class="selected"><a href="index.html">Главная</a></li>
+          <li><a href="#">Прайс лист</a></li>
+          <li><a href="#">Обратная связь</a></li>
+        </ul>
+      </nav>
       <!--
       <nav>
         <ul class="sf-menu" id="nav">
@@ -52,16 +59,16 @@
     </header>
     <div id="site_content">
       <ul id="images">
-        <li><img src="images/1.jpg" width="600" height="300" alt="seascape_one" /></li>
-        <li><img src="images/2.jpg" width="600" height="300" alt="seascape_two" /></li>
-        <li><img src="images/3.jpg" width="600" height="300" alt="seascape_three" /></li>
-        <li><img src="images/4.jpg" width="600" height="300" alt="seascape_four" /></li>
-        <li><img src="images/5.jpg" width="600" height="300" alt="seascape_five" /></li>
-        <li><img src="images/6.jpg" width="600" height="300" alt="seascape_seascape" /></li>
+        <li><img src="/images/1.jpg" width="600" height="300" alt="seascape_one" /></li>
+        <li><img src="/images/2.jpg" width="600" height="300" alt="seascape_two" /></li>
+        <li><img src="/images/3.jpg" width="600" height="300" alt="seascape_three" /></li>
+        <li><img src="/images/4.jpg" width="600" height="300" alt="seascape_four" /></li>
+        <li><img src="/images/5.jpg" width="600" height="300" alt="seascape_five" /></li>
+        <li><img src="/images/6.jpg" width="600" height="300" alt="seascape_seascape" /></li>
       </ul>
       <div id="sidebar_container">
         <div class="sidebar">
-          <h3>Последние новости</h3>
+          <h3>Новости</h3>
           
           <h4>Запуск Internet сайта.</h4>
           <h5>17 июля, 2013</h5>
