--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -24,8 +24,8 @@
       <nav>
         <ul class="sf-menu" id="nav">
           <li class="selected"><a href="index.html">Главная</a></li>
-          <li><a href="#">Прайс лист</a></li>
-          <li><a href="#">Обратная связь</a></li>
+          <li class="notwork"><a href="#">Прайс лист</a></li>
+          <li class="notwork"><a href="#">Обратная связь</a></li>
         </ul>
       </nav>
       <!--
@@ -59,7 +59,7 @@
     </header>
     <div id="site_content">
       <ul id="images">
-        <li><img src="/images/Pic001.jpg" width="600" height="300" alt="seascape_one" /></li>
+        <li><img src="/images/Pic008.jpg" width="600" height="300" alt="seascape_one" /></li>
         <li><img src="/images/Pic002.jpg" width="600" height="300" alt="seascape_two" /></li>
         <li><img src="/images/Pic003.jpg" width="600" height="300" alt="seascape_three" /></li>
         <li><img src="/images/Pic004.jpg" width="600" height="300" alt="seascape_four" /></li>
