--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -83,7 +83,7 @@
       </div>
     </div>
     <footer>
-      <p>Copyright &copy;, 2013</a></p>
+      Copyright &copy;, 2013
     </footer>
   </div>
   <p>&nbsp;</p>
