--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-@font-face { 
-  font-family: Yanone Kaffeesatz; 
-    src: url('../fonts/YanoneKaffeesatz-Regular.eot'); 
-    src: local("Yanone Kaffeesatz"), url('../fonts/YanoneKaffeesatz-Regular.ttf'); 
-} 
-
-@font-face { 
-  font-family: News Cycle; 
-    src: url('../fonts/NewsCycle-Regular.eot'); 
-    src: local("News Cycle"), url('../fonts/NewsCycle-Regular.ttf'); 
-} 
-
 html { 
   height: 100%;
 }
@@ -25,14 +13,15 @@ article, aside, figure, footer, header, hgroup, nav, section {
 }
 
 body { 
-  font: normal .80em arial, sans-serif;
+  font: tahoma, sans-serif;
+  font-size: 14px;
   background: #eeeeee url(../images/pattern.png);
   color: #444;
 }
 
 p { 
   padding: 0 0 20px 0;
-  line-height: 1.7em;
+  line-height: 18px;
 }
 
 img { 
@@ -46,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, h2, h3 { 
-  font: normal 140% arial, sans-serif;
+  font: arial, sans-serif;
   margin: 0 0 15px 0;
   padding: 15px 0 5px 0;
   color: #222;
@@ -157,7 +146,7 @@ header {
 }
 
 #logo h1, #logo h2 { 
-  font: normal 320% 'News Cycle', arial, sans-serif;
+  font: normal 320% arial, sans-serif;
   border-bottom: 0;
   text-transform: none;
   margin: 0;
@@ -277,24 +266,9 @@ footer {
   width: 950px;
   height: 30px;
   line-height: 30px;
-  padding: 5px 0 20px 0;
-  background: #ddd; /* Show a solid color for older browsers */
-}
-
-footer p { 
-  line-height: 1.7em;
-  padding: 0 0 10px 0;
-}
-
-footer a { 
-  color: #222;
-  text-decoration: none;
-}
-
-footer a:hover { 
-  color: #222;
-  text-shadow: none;
-  text-decoration: underline;
+  padding: 0 20px;
+  background: #ccc; /* Show a solid color for older browsers */
+  color:#888;
 }
 
 .form_settings { 
