--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,11 +15,12 @@
   <div id="main">
     <header>
       <div id="logo">
-        <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
+          
+          <div class="wrp">
           <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
           <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
-        </div>
+          </div>
+          
       </div>
       <nav>
         <ul class="sf-menu" id="nav">
