--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,14 @@ h1, h2, h3, h4, h5, h6 {
 
 h1, h2, h3 { 
   font: arial, sans-serif;
-  margin: 0 0 15px 0;
   padding: 15px 0 5px 0;
   color: #222;
 }
-
+h1 {
+    font-size: 32px;
+}
 h2 { 
-  font-size: 160%;
-  padding: 9px 0 5px 0;
+    font-size: 24px;
 }
 
 h3 { 
@@ -146,7 +146,6 @@ header {
 }
 #logo h1, #logo h1 a, #logo h1 a:hover { 
     color: #444;
-    font-size: 26px;
     text-decoration: none;
 }
 #logo h1 a .logo_colour { 
