--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Гостевой дом У Озера. Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка." />
   <meta name="keywords" content="Улан-Удэ, Левый берег, Карьер, Водоём, отдых, Комфортабельный номер, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="/css/reset.css" />
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="/js/modernizr-1.5.min.js"></script>
