--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,97 +3,80 @@
 
 <head>
   <title>У Озера</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Гостевой дом У Озера. Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка." />
   <meta name="keywords" content="Улан-Удэ, Левый берег, Карьер, Водоём, отдых, Комфортабельный номер, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  
   <link rel="stylesheet" type="text/css" href="/css/reset.css" />
+  <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
+  
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="/js/modernizr-1.5.min.js"></script>
 </head>
 
 <body>
-  <div id="main">
-    <header>
-      <div id="logo">
-          
-          <div class="wrp">
-          <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
-          <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
-          </div>
-          
-      </div>
-      <nav>
-        <ul class="sf-menu" id="nav">
-          <li class="selected"><a href="index.html">Главная</a></li>
-          <li class="notwork"><a href="#">Прайс лист</a></li>
-          <li class="notwork"><a href="#">Обратная связь</a></li>
-        </ul>
-      </nav>
-      <!--
-      <nav>
-        <ul class="sf-menu" id="nav">
-          <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="#">Example Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down One</a></li>
-              <li><a href="#">Drop Down Two</a>
-                <ul>
-                  <li><a href="#">Sub Drop Down One</a></li>
-                  <li><a href="#">Sub Drop Down Two</a></li>
-                  <li><a href="#">Sub Drop Down Three</a></li>
-                  <li><a href="#">Sub Drop Down Four</a></li>
-                  <li><a href="#">Sub Drop Down Five</a></li>
+    <div class="row">
+        <div class="span9">
+              
+            <div id="logo">
+                <div class="wrp">
+                <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
+                <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
+                </div>
+                
+                
+                <nav>
+                  <ul class="sf-menu" id="nav">
+                    <li class="selected"><a href="index.html">Главная</a></li>
+                    <li class="notwork"><a href="#">Прайс лист</a></li>
+                    <li class="notwork"><a href="#">Обратная связь</a></li>
+                  </ul>
+                </nav>
+
+                <ul id="images">
+                  <li><img src="/images/Pic007.jpg" width="600" height="300" alt="seascape_one" /></li>
+                  <li><img src="/images/Pic002.jpg" width="600" height="300" alt="seascape_two" /></li>
+                  <li><img src="/images/Pic003.jpg" width="600" height="300" alt="seascape_three" /></li>
+                  <li><img src="/images/Pic004.jpg" width="600" height="300" alt="seascape_four" /></li>
+                  <li><img src="/images/Pic005.jpg" width="600" height="300" alt="seascape_five" /></li>
+                  <li><img src="/images/Pic006.jpg" width="600" height="300" alt="seascape_seascape" /></li>
                 </ul>
-              </li>
-              <li><a href="#">Drop Down Three</a></li>
-              <li><a href="#">Drop Down Four</a></li>
-              <li><a href="#">Drop Down Five</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.php">Contact Us</a></li>
-        </ul>
-      </nav>
-      -->
-    </header>
-    <div id="site_content">
-      <ul id="images">
-        <li><img src="/images/Pic007.jpg" width="600" height="300" alt="seascape_one" /></li>
-        <li><img src="/images/Pic002.jpg" width="600" height="300" alt="seascape_two" /></li>
-        <li><img src="/images/Pic003.jpg" width="600" height="300" alt="seascape_three" /></li>
-        <li><img src="/images/Pic004.jpg" width="600" height="300" alt="seascape_four" /></li>
-        <li><img src="/images/Pic005.jpg" width="600" height="300" alt="seascape_five" /></li>
-        <li><img src="/images/Pic006.jpg" width="600" height="300" alt="seascape_seascape" /></li>
-      </ul>
-      <div id="sidebar_container">
-        <div class="sidebar">
-          <h3>Новости</h3>
-          
-          <h4>Запуск Internet сайта.</h4>
-          <h5>17 июля, 2013</h5>
-          <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
-          
-        </div>
-      </div>
-      <div class="content">
-          
-          {{content}}
-          
-      </div>
-    </div>
-    <footer>
-      Copyright &copy;, 2013
-    </footer>
-  </div>
-  <p>&nbsp;</p>
+                
+            </div>
+              
+            <div class="row">
+              <div class="span6">
+                  
+                  {{content}}
+                  
+              </div>
+              <div class="span3">
+                  
+                    <h3>Новости</h3>
+
+                    <h4>Запуск Internet сайта.</h4>
+                    <h5>17 июля, 2013</h5>
+                    <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
+
+                  
+                  
+                  
+              </div>
+            </div>
+      
+            Copyright &copy;, 2013
+            
+          </div>
+        </div>    
+
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/jquery.easing-sooper.js"></script>
-  <script type="text/javascript" src="js/jquery.sooperfish.js"></script>
-  <script type="text/javascript" src="js/jquery.kwicks-1.5.1.js"></script>
+  <script type="text/javascript" src="/js/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.easing-sooper.js"></script>
+  <script type="text/javascript" src="/js/jquery.sooperfish.js"></script>
+  <script type="text/javascript" src="/js/jquery.kwicks-1.5.1.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
       $('#images').kwicks({
