--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,6 +10,7 @@
   
   <link rel="stylesheet" type="text/css" href="/css/reset.css" />
   <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
+  <link href="/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
   
   <!-- modernizr enables HTML5 elements and feature detects -->
@@ -17,60 +18,90 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="span9">
-              
-            <div id="logo">
-                <div class="wrp">
-                <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
-                <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
+    <div id="wrap">
+        <div class="container">
+        
+        
+      <!-- Begin page content -->
+        <div class="page-header">
+          <h1>Sticky footer</h1>
+        </div>
+        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
+        <p>Use <a href="./sticky-footer-navbar.html">the sticky footer</a> with a fixed navbar if need be, too.</p>
+      </div>
+
+      <div id="push"></div>
+    </div>
+
+        <div class="row">
+            <div class="span9">
+
+                <div id="logo">
+                    <div class="wrp">
+                    <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
+                    <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
+                    </div>
+
+
+                    <nav>
+                      <ul class="sf-menu" id="nav">
+                        <li class="selected"><a href="index.html">Главная</a></li>
+                        <li class="notwork"><a href="#">Прайс лист</a></li>
+                        <li class="notwork"><a href="#">Обратная связь</a></li>
+                      </ul>
+                    </nav>
+
+                    <ul id="images">
+                      <li><img src="/images/Pic007.jpg" width="600" height="300" alt="seascape_one" /></li>
+                      <li><img src="/images/Pic002.jpg" width="600" height="300" alt="seascape_two" /></li>
+                      <li><img src="/images/Pic003.jpg" width="600" height="300" alt="seascape_three" /></li>
+                      <li><img src="/images/Pic004.jpg" width="600" height="300" alt="seascape_four" /></li>
+                      <li><img src="/images/Pic005.jpg" width="600" height="300" alt="seascape_five" /></li>
+                      <li><img src="/images/Pic006.jpg" width="600" height="300" alt="seascape_seascape" /></li>
+                    </ul>
+
                 </div>
-                
-                
-                <nav>
-                  <ul class="sf-menu" id="nav">
-                    <li class="selected"><a href="index.html">Главная</a></li>
-                    <li class="notwork"><a href="#">Прайс лист</a></li>
-                    <li class="notwork"><a href="#">Обратная связь</a></li>
-                  </ul>
-                </nav>
 
-                <ul id="images">
-                  <li><img src="/images/Pic007.jpg" width="600" height="300" alt="seascape_one" /></li>
-                  <li><img src="/images/Pic002.jpg" width="600" height="300" alt="seascape_two" /></li>
-                  <li><img src="/images/Pic003.jpg" width="600" height="300" alt="seascape_three" /></li>
-                  <li><img src="/images/Pic004.jpg" width="600" height="300" alt="seascape_four" /></li>
-                  <li><img src="/images/Pic005.jpg" width="600" height="300" alt="seascape_five" /></li>
-                  <li><img src="/images/Pic006.jpg" width="600" height="300" alt="seascape_seascape" /></li>
-                </ul>
-                
+                <div class="row">
+                  <div class="span6">
+
+                      {{content}}
+
+                  </div>
+                  <div class="span3">
+
+                        <h3>Новости</h3>
+
+                        <h4>Запуск Internet сайта.</h4>
+                        <h5>17 июля, 2013</h5>
+                        <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
+
+
+
+
+                  </div>
+                </div>
+
+                Copyright &copy;, 2013
+
             </div>
-              
-            <div class="row">
-              <div class="span6">
-                  
-                  {{content}}
-                  
-              </div>
-              <div class="span3">
-                  
-                    <h3>Новости</h3>
-
-                    <h4>Запуск Internet сайта.</h4>
-                    <h5>17 июля, 2013</h5>
-                    <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
-
-                  
-                  
-                  
-              </div>
-            </div>
-      
-            Copyright &copy;, 2013
-            
-          </div>
         </div>    
+    
+    
+    
+    
+    
+    
+        </div><!--container-->            
+    </div><!--wrap-->
 
+    <div id="footer">
+      <div class="container">
+        Copyright &copy;, 2013
+      </div>
+    </div>        
+    
+    
   <!-- javascript at the bottom for fast page loading -->
   <script type="text/javascript" src="/js/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
