--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,21 +16,31 @@
 </head>
 
 <body>
-
-
-    <!-- Part 1: Wrap all page content here -->
     <div id="wrap">
+        <div class="container">
+          
+          
+            <div class="page-header">
+                <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
+                <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
+            </div>
 
-      <!-- Begin page content -->
-      <div class="container">
-        <div class="page-header">
-          <h1>Sticky footer</h1>
+          
+            <div class="row">
+              <div class="span6">
+                  {{content}}
+              </div>
+              <div class="span3">
+                    <h3>Новости</h3>
+                    <h4>Запуск Internet сайта.</h4>
+                    <h5>17 июля, 2013</h5>
+                    <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
+              </div>
+            </div>
+        
+        
         </div>
-        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
-        <p>Use <a href="./sticky-footer-navbar.html">the sticky footer</a> with a fixed navbar if need be, too.</p>
-      </div>
-
-      <div id="push"></div>
+        <div id="push"></div>
     </div>
 
     <div id="footer">
