--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,15 @@
 
           
             <div class="row">
-              <div class="span6">
-                  {{content}}
-              </div>
-              <div class="span3">
-                    <h3>Новости</h3>
-                    <h4>Запуск Internet сайта.</h4>
-                    <h5>17 июля, 2013</h5>
-                    <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
-              </div>
+                <div class="span6">
+                    {{content}}
+                </div>
+                <div class="span3">
+                      <h3>Новости</h3>
+                      <h4>Запуск Internet сайта.</h4>
+                      <h5>17 июля, 2013</h5>
+                      <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
+                </div>
             </div>
         
         
@@ -45,7 +45,7 @@
 
     <div id="footer">
       <div class="container">
-        <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+        Copyright &copy;, 2013
       </div>
     </div>
 
