--- a/css/style.css
+++ b/css/style.css
@@ -40,4 +40,10 @@ body {
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
+h1,h2,h3,h4 {
+    font-weight: normal;
+}
 
+#footer .container {
+    padding: 20px 0;
+}
