--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           
             <div class="page-header">
                 <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
-                <h2>Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</h2>
+                <p class="description">Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</p>
             </div>
 
           
