--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ body {
 h1,h2,h3,h4 {
     font-weight: normal;
 }
+.page-header .description {
+    font-size: 18px;
+}
 
 #footer .container {
     padding: 20px 0;
