--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,14 @@
             <div class="page-header">
                 <h1><a href="/index.html">Гостевой дом <span class="logo_colour">"У ОЗЕРА"</span></a></h1>
                 <p class="description">Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</p>
+                
+                <ul class="nav nav-tabs">
+                  <li><a href="#home" data-toggle="tab">Home</a></li>
+                  <li><a href="#profile" data-toggle="tab">Profile</a></li>
+                  <li><a href="#messages" data-toggle="tab">Messages</a></li>
+                  <li><a href="#settings" data-toggle="tab">Settings</a></li>
+                </ul>
+                
             </div>
 
           
