--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
                 <p class="description">Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</p>
                 
                 <ul id="menu" class="nav nav-tabs">
-                  <li><a href="#home" data-toggle="tab">Главная</a></li>
-                  <li><a href="#price" data-toggle="tab">Прайс-лист</a></li>
-                  <li><a href="#form" data-toggle="tab">Обратная связь</a></li>
+                  <li><a href="/index.html">Главная</a></li>
+                  <li><a href="#price">Прайс-лист</a></li>
+                  <li><a href="#form">Обратная связь</a></li>
                 </ul>
                 
             </div>
@@ -36,12 +36,7 @@
             <div class="row">
                 <div class="span9">
                     
-                    <div class="tab-content">
-                      <div class="tab-pane active" id="home">{{content}}</div>
-                      <div class="tab-pane" id="price">...</div>
-                      <div class="tab-pane" id="form">...</div>
-                    </div>                    
-                    
+                    {{content}}
                     
                 </div>
                 <div class="span3">
