--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h1,h2,h3,h4 {
 }
 .page-header {
     border:0;
-    
+    margin:30px 0 10px 0;
 }
 .page-header .description {
     font-size: 18px;
