--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -45,9 +45,9 @@
 
                     <nav>
                       <ul class="sf-menu" id="nav">
-                        <li class="selected"><a href="index.html">Главная</a></li>
-                        <li class="notwork"><a href="#">Прайс лист</a></li>
-                        <li class="notwork"><a href="#">Обратная связь</a></li>
+                        <li class="selected"><a href="index.html"><i class="icon-home"></i> Главная</a></li>
+                        <li class="notwork"><a href="#"><i class="icon-list-alt"></i> Прайс лист</a></li>
+                        <li class="notwork"><a href="#"><i class="icon-check"></i> Обратная связь</a></li>
                       </ul>
                     </nav>
 
