--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -64,9 +64,9 @@
 
                 <div class="row">
                   <div class="span6">
-
+                      <div class="well">
                       {{content}}
-
+                      </div>
                   </div>
                   <div class="span3">
 
