--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
 </head>
-
+ 
 <body>
     <div id="wrap">
         <div class="container">
@@ -25,9 +25,9 @@
                 <p class="description">Комфортабельные номера, конные прогулки, катание на лодке, рыбалка, мангал, тент, парковка</p>
                 
                 <ul id="menu" class="nav nav-tabs">
-                  <li><a href="/index.html">Главная</a></li>
-                  <li><a href="#price">Прайс-лист</a></li>
-                  <li><a href="#form">Обратная связь</a></li>
+                  <li><a href="/index.html" ><i class="icon-home"></i> Главная</a></li>
+                  <li><a href="#price"><i class="icon-list-alt"></i> Прайс-лист</a></li>
+                  <li><a href="#form"><i class="icon-check"></i> Обратная связь</a></li>
                 </ul>
                 
             </div>
@@ -35,9 +35,9 @@
           
             <div class="row">
                 <div class="span9">
-                    
-                    {{content}}
-                    
+                    <div class="well">
+                    {{content}} 
+                    </div>
                 </div>
                 <div class="span3">
                       <h3>Новости</h3>
