--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ body {
 h1,h2,h3,h4 {
     font-weight: normal;
 }
+h2 {
+    font-size: 22px;
+}
 .page-header {
     border:0;
     margin:30px 0 10px 0;
