--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,15 @@
                   <li><a href="#form"><i class="icon-check"></i> Обратная связь</a></li>
                 </ul>
                 
+                <ul id="images">
+                  <li><img src="/images/Pic007.jpg" /></li>
+                  <li><img src="/images/Pic002.jpg" /></li>
+                  <li><img src="/images/Pic003.jpg" /></li>
+                  <li><img src="/images/Pic004.jpg" /></li>
+                  <li><img src="/images/Pic005.jpg" /></li>
+                  <li><img src="/images/Pic006.jpg" /></li>
+                </ul>
+                
             </div>
 
           
