--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,22 @@ h2 {
     border:10px solid #ccc;
     margin:20px 0 10px 0;
 }
+
+#images {
+    list-style: none;
+    margin:0;
+    padding:0;
+}
+
+#images li {
+    display: inline-block;
+    width:300px;
+    height:150px;
+    border:5px solid #ddd;
+    margin:10px;
+    vertical-align: middle;
+}
+#images li img{
+    width:300px;
+    height:150px;
+}
