--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   
   <link rel="stylesheet" type="text/css" href="/css/reset.css" />
+  <link href="/css/colorbox.css" rel="stylesheet" media="screen">
   <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
   <link href="/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
@@ -69,6 +70,7 @@
 
 
 <script type="text/javascript" src="/js/jquery.js"></script>
+<script type="text/javascript" src="/js/jquery.colorbox-min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script>
   $(function () {
