--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
     jQuery('#menu').tab();
     jQuery('a.colorbox').colorbox();
     jQuery('a.gall').colorbox({rel:'gal'});
-
+    alert(1);
   })
 </script>  
 </body>
