--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
 <script type="text/javascript" src="/js/jquery.colorbox-min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script>
-  $(function () {
+  jQuery(function () {
     jQuery('#menu').tab();
     jQuery('a.colorbox').colorbox();
     jQuery('a.gall').colorbox({rel:'gal'});
