--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
                 </ul>
                 
                 <ul id="images">
-                  <li><a href="/images/Pic007b.jpg" class="gal"><img src="/images/Pic007.jpg" /></a></li>
+                  <li><a href="/images/Pic007b.jpg" class="gall"><img src="/images/Pic007.jpg" /></a></li>
                   <li><img src="/images/Pic002.jpg" /></li>
                   <li><img src="/images/Pic003.jpg" /></li>
                   <li><img src="/images/Pic004.jpg" /></li>
