--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,11 @@
                 
                 <ul id="images">
                   <li><a href="/images/Pic007b.jpg" class="gall"><img src="/images/Pic007.jpg" /></a></li>
-                  <li><img src="/images/Pic002.jpg" /></li>
-                  <li><img src="/images/Pic003.jpg" /></li>
-                  <li><img src="/images/Pic004.jpg" /></li>
-                  <li><img src="/images/Pic005.jpg" /></li>
-                  <li><img src="/images/Pic006.jpg" /></li>
+                  <li><a href="/images/Pic002b.jpg" class="gall"><img src="/images/Pic002.jpg" /></a></li>
+                  <li><a href="/images/Pic003b.jpg" class="gall"><img src="/images/Pic003.jpg" /></a></li>
+                  <li><a href="/images/Pic004b.jpg" class="gall"><img src="/images/Pic004.jpg" /></a></li>
+                  <li><a href="/images/Pic005b.jpg" class="gall"><img src="/images/Pic005.jpg" /></a></li>
+                  <li><a href="/images/Pic006b.jpg" class="gall"><img src="/images/Pic006.jpg" /></a></li>
                 </ul>
                 
             </div>
