--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,12 @@
                       <h4>Запуск Internet сайта.</h4>
                       <h5>17 июля, 2013</h5>
                       <p>На нашем сайте будет подробная информация для наших гостей..<br /><a href="#">Читать всю новость..</a></p>
+                      
+                      <br/>
+                      <br/>
+                      
+                      <a target="_blank" class="mrc__plugin_uber_like_button" href="http://connect.mail.ru/share" data-mrc-config="{'nc' : '1', 'cm' : '3', 'sz' : '20', 'st' : '1', 'tp' : 'mm'}">Нравится</a>
+                      <script src="http://cdn.connect.mail.ru/js/loader.js" type="text/javascript" charset="UTF-8"></script>
                 </div>
             </div>
         
