--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ body {
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
+body {
+    background: #F2F0FF;
+}
 h1,h2,h3,h4 {
     font-weight: normal;
 }
